Removed background images, updated general theme. Fixed alignment.

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -16,7 +16,7 @@ body {
     justify-content: space-around;
 }
 
-.middle {
+.weather {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,9 +24,13 @@ body {
     position: relative;
     text-align: center;
     margin: 0 3ex;
+    height: 85vh;
+
+    > div {
+        padding: 2ex 0;
+    }
 
     .weather-summary {
-        margin: 1ex 0;
         font-size: 180%;
     }
 
@@ -34,7 +38,6 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-top: 5ex;
 
         .weather-icon {
             width: 35%;
@@ -60,72 +63,68 @@ body {
         }
     }
 
-}
+    .hourly-timeline {
 
-.hourly-timeline {
-    position: fixed;
-    bottom: 2ex;
-    left: 0;
-    right: 0;
-
-    > div {
-        display: inline-block;
-        font-size: 95%;
-    }
-
-    > div {
-        &:first-child {
-            border-radius: 7px 0px 0px 7px;
+        > div {
+            display: inline-block;
+            font-size: 95%;
         }
-        &:last-child {
-            border-radius: 0px 7px 7px 0px;
+
+        > div {
+            &:first-child {
+                border-radius: 7px 0px 0px 7px;
+            }
+            &:last-child {
+                border-radius: 0px 7px 7px 0px;
+            }
+        }
+
+        .hourly-time {
+            padding-top: 0.5ex;
+        }
+
+        .hourly-icon {
+            padding: 1ex 0;
+            width: 4em;
+        }
+
+        .clear-day {
+            // background: #ffb300;
+        }
+
+        .clear-night,
+        .partly-cloudy-night {
+            // background: #0d47a1;
+            color: white;
+        }
+
+        .partly-cloudy-day {
+            // background: #ffb300;
+        }
+
+        .rain,
+        .sleet {
+            // background: #0288d1;
+            color: white;
+        }
+
+        .snow {
+            // background: #90a4ae;
+        }
+
+        .fog {
+            // background: #757575;
+            color: white;
+        }
+
+        .cloudy,
+        .wind {
+            // background: #9e9e9e;
+        }
+
+        .hourly-temp {
+            padding-bottom: 0.5ex;
         }
     }
 
-    .hourly-time {
-        padding-top: 0.5ex;
-    }
-
-    .hourly-icon {
-        padding: 1ex 0;
-        width: 4em;
-    }
-
-    .clear-day {
-        // background: #ffb300;
-    }
-
-    .clear-night,
-    .partly-cloudy-night {
-        // background: #0d47a1;
-        color: white;
-    }
-
-    .partly-cloudy-day {
-        // background: #ffb300;
-    }
-
-    .rain,
-    .sleet {
-        // background: #0288d1;
-        color: white;
-    }
-
-    .snow {
-        // background: #90a4ae;
-    }
-
-    .fog {
-        // background: #757575;
-        color: white;
-    }
-
-    .cloudy,
-    .wind {
-        // background: #9e9e9e;
-    }
-
-    .hourly-temp {
-        padding-bottom: 0.5ex;
-    }
 }
